# django-datepick

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
datepick/: fields.py  forms.py  widgets.py
docs/: Chromium_Video.webm
